    there is no need to put all files/programs on the
    root directory of Z drive any more. Only one-level
    directories are currently supported. There are now
    six directories on the Z drive by default, namely
    4DOS, BIN, DEBUG, DOS, SYSTEM, TEXTUTIL. Most files
    that previously appeared on the root directory of
    Z drive are now categorized into directories, with
    addition of some files/programs. (Wengier)
  - Added "Refresh rate..." menu option (under "Video")
    to set the video refresh rate. (Wengier)
  - Added "Enable A20 gate" menu option (under "DOS")
    to enable or disable the A20 gate. (Wengier)
  - Added "maximize" config option in [sdl] section to
    automatically maximize the DOSBox-X window at start
    (SDL2 and Windows SDL1 builds only). (Wengier)
  - Added "debuggerrun" config option in [log] section
    to set the run mode when DOSBox-X Debugger starts.
    You can now also switch them from the menu ("Help"
    => "Debugging options" => "Debugger option: ..."),
    including "debugger", "normal" & "watch". Also, the
    built-in DEBUGBOX command without a parameter will
    start the DOSBox-X debugger. (Wengier)
  - Added menu options "Generate NMI interrupt" & "Hook
    INT 2Fh calls" ("Help" => "Debugging options") for
    more debugging options. (Wengier)
  - Integrated SVN commits (Allofich)
    - r4443: Improve detection of Paradise SVGA in some
    installers with additional signature.
0.83.13
  - DOSBox-X can now resolve file paths in its config
    options that include environment variables on non-
    Windows platforms (e.g. ${HOME}..) as well. A new
    config option "resolve config path" (in [dosbox]
    section) is added to control path resolving in the
    config file (e.g. to resolve tildes only by setting
    to "tilde", or disable all path resolving). (Wengier)
  - System menu text in Windows builds now match the text
    in the drop-down menus to be translatable by language