@@ -536,7 +536,8 @@ enable pci bus                                  = true
 #                                                      This can be used to help diagnose whether or not the DOS game is page flipping properly according to vertical retrace if the display on-screen is flickering.
 #                  vertical retrace poll debug line: VGA debugging switch. If set, an inverse green dotted line will be drawn on the exact scanline that the CRTC status port (0x3DA) was read.
 #                                                      This can be used to help diagnose whether the DOS game is propertly waiting for vertical retrace.
-#                                           cgasnow: When machine=cga, determines whether or not to emulate CGA snow in 80x25 text mode
+#                                           cgasnow: When machine=cga, determines whether or not to emulate CGA snow in 80x25 text mode.
+#                                                      This parameter is also changeable from the builtin CGASNOW command in CGA mode.
 #                            vga 3da undefined bits: VGA status port 3BA/3DAh only defines bits 0 and 3. This setting allows you to assign a bit pattern to the undefined bits.
 #                                                      The purpose of this hack is to deal with demos that read and handle port 3DAh in ways that might crash if all are zero.
 #                             rom bios 8x8 CGA font: If set, or mainline DOSBox compatible BIOS mapping, a legacy 8x8 CGA font (first 128 characters) is stored at 0xF000:0xFA6E. DOS programs that do not use INT 10h to locate fonts might require that font to be located there.
