@@ -1,4 +1,4 @@
 /*auto-generated*/
-#define UPDATED_STR "May 7, 2021 4:03:25am"
-#define GIT_COMMIT_HASH "b13972f"
+#define UPDATED_STR "May 9, 2021 1:26:40am"
+#define GIT_COMMIT_HASH "b778192"
 #define COPYRIGHT_END_YEAR "2021"
